# ExpenseFlow

./: API.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml
.agent/rules/: fastapi-best-practices.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_extraction.py
backend/alembic/: env.py
backend/alembic/versions/: 0bb1dde985b2_add_bankaccount_table.py  0ef3564b4bf8_add_category_table.py  d22efa84079d_add_transaction_category_relationship.py  e0e7e838d659_add_transaction_model.py  e367b6373628_add_user_table.py  eddabb0cef87_add_statement_format_table.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accounts.py  analytics.py  categories.py  statement_formats.py  transactions.py
backend/app/core/: config.py  users.py
backend/app/crud/: __init__.py  crud_account.py  crud_category.py  crud_transaction.py  statement_format.py
backend/app/db/: base.py
backend/app/models/: account.py  category.py  statement_format.py  transaction.py  user.py
backend/app/schemas/: account.py  analytics.py  category.py  statement_format.py  transaction.py  user.py
backend/app/services/: statement_parser.py
backend/scripts/: verify_accounts.py
backend/tests/: test_categories.py  test_statement_formats.py  test_transaction_categories.py  test_transactions_manual.py  test_upload_endpoint.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: accounts.ts  analytics.ts  auth.ts  categories.ts  client.ts  transactions.ts  (+2 more)
(+17 files in other folders)
